<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightBlue">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/boxWidth"
        android:layout_height="@dimen/boxHeight"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/btnBackgroundColor"
        app:cardCornerRadius="@dimen/big"
        android:id="@+id/cardviewForOption"
        app:cardElevation="@dimen/smallsize"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/smallsize"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_gravity="center"

            >
            <Button
                android:id="@+id/online"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_cornor"
                android:text="@string/Online"
                android:textAlignment="center"

                android:layout_weight="1"
                android:layout_gravity="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp35"
                android:layout_margin="20dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/offline"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_cornor"
                android:text="@string/offline"
                android:gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp35"
                android:layout_margin="20dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/youvsAi"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_cornor"
                android:text="@string/youvsai"
                android:gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp35"
                android:layout_margin="20dp"
                android:textStyle="bold" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>



</RelativeLayout>